Render a simple nav bar and create some layouts for different parts of the calendar.

--- a/res/layout/widget.xml
+++ b/res/layout/widget.xml
@@ -22,8 +22,8 @@
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:gravity="center"
+            android:layout_weight="1"
             android:textSize="24sp" />
             
         <ImageButton
@@ -37,9 +37,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/weekday_header"
+        android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:orientation="horizontal" >
     </LinearLayout>
 
