--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,11 +1,12 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="cell">
+        <item name="android:id">@android:id/text1</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">center</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">13sp</item>
         <item name="android:textColor">@color/translusent_white</item>
     </style>
 
