Add widget preview.

--- a/res/xml/appwidget_info.xml
+++ b/res/xml/appwidget_info.xml
@@ -6,5 +6,6 @@
     android:minResizeWidth="180dp"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="5000"
-    android:widgetCategory="home_screen"/>
+    android:widgetCategory="home_screen"
+    android:previewImage="@drawable/preview"/>
 
