--- a/res/xml/appwidget_info.xml
+++ b/res/xml/appwidget_info.xml
@@ -5,7 +5,7 @@
     android:minResizeHeight="110dp"
     android:minResizeWidth="180dp"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="5000"
+    android:updatePeriodMillis="21600000"
     android:widgetCategory="home_screen"
     android:previewImage="@drawable/preview"/>
 
