--- a/res/layout/cell_current_month_day.xml
+++ b/res/layout/cell_current_month_day.xml
@@ -2,5 +2,5 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/cell"
     android:background="@color/transparent_white"
-    android:textColor="@color/white">
+    android:textColor="#fff">
 </TextView>
