--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -2,19 +2,11 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <ListPreference
-        android:key="font_color"
-        android:title="@string/font_color"
-        android:summary="@string/font_color_summary"
-        android:defaultValue="ffffffff" 
-        android:entries="@array/font_color_entries" 
-        android:entryValues="@array/font_color_values"/>
+        android:key="@string/pref_theme"
+        android:title="@string/theme"
+        android:summary="@string/theme_summary"
+        android:defaultValue="0" 
+        android:entries="@array/themes" 
+        android:entryValues="@array/theme_values"/>
     
-    <ListPreference
-        android:key="today_font_color"
-        android:title="@string/today_font_color"
-        android:summary="@string/today_font_color_summary"
-        android:defaultValue="ffff0000" 
-        android:entries="@array/font_color_entries"
-        android:entryValues="@array/font_color_values"/>
-
 </PreferenceScreen>
