--- a/res/values/keys.xml
+++ b/res/values/keys.xml
@@ -2,5 +2,6 @@
 <resources>
     
     <string name="pref_theme">theme</string>
+    <string name="pref_week_start_day">week_start_day</string>
     
 </resources>
