--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <ListPreference
-        android:key="@string/pref_theme"
-        android:title="@string/theme"
-        android:summary="@string/theme_summary"
-        android:defaultValue="0"
-        android:entries="@array/themes" 
-        android:entryValues="@array/theme_values"/>
-    
-    <ListPreference 
-        android:key="@string/pref_week_start_day"
-        android:title="@string/week_start_day"
-        android:summary="@string/week_start_day_summary"
-        android:defaultValue="1"
-        android:entries="@array/week_start_day"
-        android:entryValues="@array/week_start_day_values"/>
+    <PreferenceCategory android:title="@string/widget" >
         
+        <ListPreference
+            android:defaultValue="0"
+            android:entries="@array/themes"
+            android:entryValues="@array/theme_values"
+            android:key="@string/pref_theme"
+            android:summary="@string/theme_summary"
+            android:title="@string/theme" />
+        
+        <ListPreference
+            android:defaultValue="1"
+            android:entries="@array/week_start_day"
+            android:entryValues="@array/week_start_day_values"
+            android:key="@string/pref_week_start_day"
+            android:summary="@string/week_start_day_summary"
+            android:title="@string/week_start_day" />
+        
+    </PreferenceCategory>
+
 </PreferenceScreen>
