--- a/res/values/keys.xml
+++ b/res/values/keys.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
+    <string name="pref_version">version</string>
     <string name="pref_theme">theme</string>
     <string name="pref_week_start_day">week_start_day</string>
     
