--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -7,21 +7,21 @@
             android:defaultValue="0"
             android:entries="@array/themes"
             android:entryValues="@array/theme_values"
-            android:key="@string/pref_theme"
+            android:key="theme"
             android:title="@string/theme" />
 
         <ListPreference
             android:defaultValue="1"
             android:entries="@array/week_start_day"
             android:entryValues="@array/week_start_day_values"
-            android:key="@string/pref_week_start_day"
+            android:key="week_start_day"
             android:title="@string/week_start_day" />
 
         <ListPreference
             android:defaultValue="0"
             android:entries="@array/on_day_click"
             android:entryValues="@array/on_day_click_values"
-            android:key="@string/pref_on_day_click"
+            android:key="on_day_click"
             android:title="@string/on_day_click" />
         
     </PreferenceCategory>
@@ -29,7 +29,7 @@
     <PreferenceCategory android:title="@string/about" >
         
         <Preference
-            android:key="@string/pref_version"
+            android:key="version"
             android:title="@string/version"
             android:persistent="false"/>
  
